--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
               <div class="col">
                 <select id="granularity" name="granularity" onchange="changeGranularity()">
                     <option value="data/gas_price_us_d.csv">Daily</option>
-                    <option value="data/gas_price_us_m.csv">Weekly</option>
-                    <option value="data/gas_price_us_w.csv">Monthly</option>
+                    <option value="data/gas_price_us_w.csv">Weekly</option>
+                    <option value="data/gas_price_us_m.csv">Monthly</option>
                     <option value="data/gas_price_us_a.csv">Annual</option>
                   </select>
                   <div class="center-block" id="plot_div"></div>
